# elastic-service

./: .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  docker-compose-local.yaml  pyproject.toml  requirements.txt  setup.cfg
src/: config.py  debug.py  logging_config.py  main.py  security.py
src/api/: exc.py
src/api/authorization/: __init__.py  authorization.py  mixins.py  user_validators.py
src/api/authorization/handlers/: __init__.py  base.py  company_validators.py
src/api/endpoints/: admin_endpoints.py  company_endpoints.py  login_endpoints.py  user_endpoints.py
src/api/schemas/: create.py  mixins.py  read.py  update.py
src/api/services/: __init__.py  auth.py  company.py  user.py
src/database/: __init__.py  base.py  dependencies.py
src/database/models/: company.py  employee.py  user.py
src/migrations/: env.py
src/migrations/versions/: 2025_01_14_1639-c843895e2477_new_fields.py  2025_01_16_2032-b5b0a30ed23b_remove_nnull_from_employee.py  85e18a32b914_company_employee.py  d551e0ef2026_init.py
src/tests/: alembic.ini  conftest.py
src/tests/migrations/: env.py
src/tests/migrations/versions/: 2025_01_13_2030-dfeaa667965c_init.py
src/tests/test_admin/: test_grant.py
src/tests/test_user/: auth.py  test_auth.py  test_create_user.py  test_delete_user.py  test_update_user.py
src/utils/: access_models.py
